# NewSettler

./: Cargo.toml  README.md
src/: bot.rs  controllers.rs  db.rs  error.rs  main.rs  parsing_data.rs  settler_db.sqlite
src/entity/: users.rs
src/migration/: m20220101_000001_create_users.rs  mod.rs
