[package]
name = "new-settler-bot"
authors = ["Alex Smith Feston229"]
license = "GPL-3.0-only"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Feston229/NewSettler"
readme = "README.md"
keywords = ["bot", "telegram-bot", "parsing"]
categories = ["command-line-utilities"]

[dependencies]
teloxide = { version = "0.11", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version = "1.8", features = ["full"] }
scraper = "*"
reqwest = "*"
sea-orm = { version = "0.10.5"}
directories = "4.0.1"
lazy_static = "1.4.0"
async_once = "0.2.6"

[dependencies.sea-orm-migration]
version = "0.10.5"
features = [
  "runtime-tokio-rustls",
  "sqlx-sqlite",
]

[profile.release]
lto = true
codegen-units = 1
